--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DB_NAME=haber_editor
 # Flask Configuration
 FLASK_ENV=development
 SECRET_KEY=haber-editor-secret-key-2025
+
+# AI Configuration
+GEMINI_API_KEY="AIzaSyDTDGi689_o5IeoSRH7vJZeFpDtcdQbKtM"
