feat: implement core application structure with routes, services and UI components

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,35 @@
-# Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=haber_editor
+# Uygulama Genel Ayarları
+# =====================
 
-# Flask Configuration
+# Flask Uygulama Ayarları
+# ---------------------
 FLASK_ENV=development
-SECRET_KEY=your-secret-key-change-in-production
+SECRET_KEY=your-secret-key-change-this-in-production
+DEBUG=True
 
-# AI Service Configuration (for future use)
-AI_API_KEY=your-ai-api-key-here
-AI_MODEL=gpt-3.5-turbo
+# Varsayılan Kullanıcı Bilgileri
+# -----------------------------
+DEFAULT_USER_ID=default_user_2025
+DEFAULT_USERNAME=Kullanıcı
+
+# Veritabanı Yapılandırması
+# -----------------------
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=your-db-password
+MYSQL_DB=haber_editor
+
+# Google Gemini API Ayarları
+# ------------------------
+GOOGLE_AI_API_KEY=your-google-ai-api-key
+MODEL_NAME=gemini-pro
+
+# Uygulama Yapılandırması
+# ----------------------
+UPLOAD_FOLDER=uploads/
+MAX_CONTENT_LENGTH=16 * 1024 * 1024  # 16MB maksimum dosya boyutu
+
+# Geliştirme Ayarları
+# ------------------
+# DEBUG=True  # Sadece geliştirme ortamında açık olmalı
+# TESTING=False
